--- a/OnlineCourseWeb/web/Views/Css/Home.scss
+++ b/OnlineCourseWeb/web/Views/Css/Home.scss
@@ -10,12 +10,27 @@ and open the template in the editor.
 
 body{
     font-size: 18px;
+    margin: 0%;
+}
+
+*:focus{
+    outline: none;
+}
+
+.small-container{
+    margin: 0 auto;
+    width: 80%;
 }
 
 .header{
+    border-bottom: 1px solid #000000;
+}
+
+.header .small-container{
     display: flex;
+    flex-wrap: wrap;
     height: 80px;
-    border: 1px solid #000;
+    height: auto;
 }
 
 .logo{
@@ -26,13 +41,160 @@ body{
     background-position: 5px 5px;
 }
 
-
-
-.small-container{
-    margin: 0 auto;
-    width: 80%;
-    border: 1px solid #000;;
+.menu-function{
+    flex: 50%;
+    display: flex;
+    align-items: center;
+    font-weight: bold;
 }
+
+.menu-function ul{
+    list-style-type: none;
+    display: flex;
+    font-size: 20px;
+    align-items: center;
+    padding-left: 0px;
+}
+
+.menu-function ul li{
+    margin: 0px 20px 0px 20px;
+}
+
+.menu-login{
+    flex: 20%;
+    display: flex;
+    align-items: center;
+}
+
+.menu-login input{
+    font-size: 20px;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    margin: 0px 10px 0px 10px;
+}
+
+.icon-search{
+    cursor: pointer;
+}
+
+.sign-in{
+    margin: 0px 10px 0px 0px;
+}
+
+#btnSignIn{
+    border: none;
+    background-color: #ffffff;
+    padding: 5px;
+}
+
+#btnSignIn:hover{
+    border: 1px solid #000;
+    border-radius: 15px;
+    color: #065683;
+    font-weight: bold;
+}
+
+#btnRegister{
+    border: 1px solid #000;
+    border-radius: 15px;
+    color: #065683;
+    background-color: #ffffff;
+    padding: 5px;
+}
+
+#btnRegister:hover{
+
+    font-weight: bold;
+}
+
+.web-introduction{
+    text-align: left;
+    border-top: 1px solid #58585c;
+    background: #F4F7FF;
+}
+
+.web-introduction .small-container{
+    text-align: left;
+    min-width: 400px;
+}
+
+.describe-web-introduction h2{
+    width: 40%;
+    font-size: 34px;
+    margin: 10px 0 10px 0;
+}
+
+.web-introduction button{
+    color: #ffffff;
+    font-weight: bold;
+    background-color: #065683;
+    padding: 10px 20px 10px 20px;
+    border: none;
+    border-radius: 15px;
+    cursor: pointer;
+    margin-bottom: 20px;
+}
+
+.web-introduction button:hover{
+    background-color: #23419F;
+}
+
+.search-course{
+    font-size: 20px;
+    padding: 20px 0 20px 0;
+    background-color: #D8EDF8;
+}
+
+.search-course h3{
+    margin: 0px 0 5px 0;
+}
+
+.input-search-course{
+    border: 1px solid #000;
+    border-radius: 15px;
+    padding: 5px 10px 5px 10px;
+    width: 50%;
+    background-color: #ffffff;
+}
+
+.search-course input{
+    font-size: 20px;
+    border: none;
+    width: 90%;
+}
+
+.search-course i{
+    margin-left: 10px;
+    cursor: pointer;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 a, a:visited {
@@ -88,3 +250,42 @@ a:hover {
     margin-top: 0px;
     padding-top: 10px;
 }
+
+.online-course input{
+    border-radius: 20px;
+    padding: 10px 15px 10px 15px;
+    background-color: #ffffff;
+    cursor: pointer;
+    font-weight: bold;
+    margin-bottom: 20px;
+}
+
+.online-course input:hover{
+    color: #065683
+}
+
+.footer{
+    background-color: #FCFCFC;
+}
+
+.footer .small-container{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+
+.footer .small-container ul{
+    list-style-type: none;
+    padding-left: 15px;
+}
+
+.info-member{
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.member-detail{
+    border-right: 1px solid #000;
+    padding: 0 20px 0px 20px;
+}
+
